--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "swiper": "^12.0.3"
   },
   "devDependencies": {
+    "@tailwindcss/line-clamp": "^0.4.4",
     "@tailwindcss/postcss": "^4.1.18",
     "@types/node": "^20",
     "@types/react": "^19",
