--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@iconify/react": "^6.0.2",
+    "axios": "^1.13.4",
     "next": "^15.5.9",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
